--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "version": "0.0.0",
   "main": "example.js",
   "scripts": {
-    "build-js": "browserify -p esmify --debug example.js > public/bundle.js",
+    "build-js": "rollup --config",
+    "//build-js": "rollup --name \"fissionDid\"",
+    "build-js-old": "browserify -p esmify -t [ babelify --global  --presets [ @babel/preset-env ] --plugins [ @babel/plugin-proposal-export-namespace-from ] ] --debug example.js > public/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "webnative": "^0.27.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.14.5",
+    "@babel/preset-env": "^7.15.0",
+    "babelify": "^10.0.0",
     "browserify": "^17.0.0",
-    "esmify": "^2.1.1"
+    "ecstatic": "^4.1.4",
+    "esmify": "^2.1.1",
+    "rollup": "^2.56.3"
   },
   "repository": {
     "type": "git",
