--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "concurrently": "^6.2.1",
     "htm": "^3.1.0",
+    "keystore-idb": "^0.14.2",
     "preact": "^10.5.14",
+    "uint8arrays": "^3.0.0",
     "webnative": "^0.27.0",
     "xtend": "^4.0.2"
   },
@@ -30,7 +32,8 @@
     "ecstatic": "^4.1.4",
     "esmify": "^2.1.1",
     "rollup": "^2.56.3",
-    "sass": "^1.39.0"
+    "sass": "^1.39.0",
+    "typescript": "^4.4.2"
   },
   "repository": {
     "type": "git",
