--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "npm run build-sass && concurrently --kill-others \"npm run serve\" \"npm run watch-sass\"",
     "serve": "budo example.js:bundle.js --dir=public/ --live --pushstate --open -- -p esmify -dv",
     "build-js-br": "browserify -p esmify -t [ babelify --global --presets [ @babel/preset-env ] --plugins [ @babel/plugin-proposal-export-namespace-from ] ] --debug example.js > public/bundle.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-node node_modules/tape/bin/tape test/index.ts | tap-spec"
   },
   "dependencies": {
     "concurrently": "^6.2.1",
@@ -26,6 +26,7 @@
     "@babel/plugin-proposal-export-namespace-from": "^7.14.5",
     "@babel/preset-env": "^7.15.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
+    "@types/tape": "^4.13.2",
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
     "budo": "^11.6.4",
@@ -33,6 +34,9 @@
     "esmify": "^2.1.1",
     "rollup": "^2.56.3",
     "sass": "^1.39.0",
+    "tap-spec": "^5.0.0",
+    "tape": "^5.3.1",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   },
   "repository": {
