--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "outDir": "dist"
   },
   "include": [
-    "src/**/*",
+    "src",
     "tests/**/*"
-  ],
-  "exclude": [
-    "node_modules"
   ]
 }
