--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "fission-did",
+  "name": "@nichoth/fission-did",
   "description": "What is UCAN?",
   "version": "0.0.0",
-  "main": "example.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "roll": "rollup --config",
     "build-sass": "sass style.scss public/style.css",
     "watch-sass": "sass --watch style.scss public/style.css",
     "start": "npm run build-sass && concurrently --kill-others \"npm run serve\" \"npm run watch-sass\"",
     "serve": "budo example.js:bundle.js --dir=public/ --live --pushstate --open -- -p esmify -dv",
-    "build": "tsc src/index",
+    "build": "mkdir -p dist && tsc",
+    "prepublish": "npm run build",
     "build-js-br": "browserify -p esmify -t [ babelify --global --presets [ @babel/preset-env ] --plugins [ @babel/plugin-proposal-export-namespace-from ] ] --debug example.js > public/bundle.js",
     "test": "ts-node node_modules/tape/bin/tape test/index.ts | tap-spec"
   },
